# graphics-final-project

./: .gitignore  CMakeLists.txt  README.md  submission-realtime.md  submission.md
resources/shaders/: anim.frag  anim.vert  colorgrading.frag  crepuscular.frag  default.frag  default.vert  fog.frag  particles.frag  particles.vert  scrolling.frag  seasoncolorgrading.frag  shadow_depth.frag  shadow_depth.vert  shadow_depth_point.frag  shadow_depth_point.vert  skybox.frag  skybox.vert  texture.vert
sc2/realtime/: finalscene.json
sc2/realtime/meshes/: deer_idle.glb  horse6.glb
scenefiles/realtime/extra_credit/: finalscene.json
src/: camera.cpp  camera.h  cgltf.h  geometry.cpp  mainwindow.cpp  mainwindow.h  particles.h  pngio.cpp  pngio.h  realtime.cpp  realtime.h  settings.h  uniforms.cpp  vivek.cpp  wavefunctioncollapse.cpp  wavefunctioncollapse.h
src/camerapaths/: camerapath.cpp  camerapath.h
src/postprocessing/: colorgrade.cpp  colorgrade.h  convolution.cpp  convolution.h  crepuscular.cpp  crepuscular.h  fog.cpp  fog.h  postprocess.cpp  postprocess.h  seasoncolorgrade.cpp  seasoncolorgrade.h
src/shapes/: Cone.cpp  Cone.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Particle.h  Sphere.cpp  Sphere.h  mesh.cpp  mesh.h
src/utils/: lsystems.cpp  miscutilities.cpp  miscutilities.h  particles.cpp  scenedata.h  scenefilereader.cpp  sceneparser.cpp  sceneparser.h
